# AI-Job_Hunting_Assistant

./: ARCHITECTURE.md  DESIGN.md  README.md  agents.md  components.d.ts  design-qa.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts  vite.config.ts.timestamp-1782894689628-a7b9c1ac3a2ba.mjs  xiaozhi-jianli1.md  简历优化依据Workflow改造方案.md  简历定制单页布局改造方案.md
.agents/skills/ai-job-assistant-change-workflow/: SKILL.md
.github/workflows/: release.yml
.trae/documents/: prd.md  tech-arch.md
artifacts/: status-manager-comparison.html
scripts/: release.ps1
src/: App.vue  main.ts  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: db.rs  exporter.rs  main.rs  models.rs  reminder.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/rag/: mod.rs
src/components/Application/: ApplicationFormDialog.vue  StatusManagerDialog.vue
src/components/Customize/: GenerateResult.vue
src/components/Layout/: AppLayout.vue
src/composables/: useBackdropClose.ts
src/router/: index.ts
src/stores/: ai.ts  application-status.ts  application.ts  resume.ts
src/types/: index.ts
src/utils/: ai.ts  constants.ts  db-adapter.ts  db.ts  interview.ts  markdown.ts  message.ts  platform.ts  rag.ts  self-introduction.ts
src/views/: ApplicationDetail.vue  ApplicationList.vue  Customize.vue  Dashboard.vue  ResumeDetail.vue  ResumeList.vue  Settings.vue
tests/: editor-layout.test.ts  mock-ai-server.mjs  rag.test.ts  self-introduction.test.ts
(+2 files in other folders)
